VQ-294 | Ability to list all tickets for the manager(Modifying the whole UI pages designs

--- a/src/app/features/administration/components/staff-performance/view-employee/view-employee.component.html
+++ b/src/app/features/administration/components/staff-performance/view-employee/view-employee.component.html
@@ -74,10 +74,10 @@
                 <p-columnFilter type="text" field="staffs?.emailAddress" matchMode="contains" [showMenu]="false"></p-columnFilter>
               </th>
               <th>
-
+                <p-columnFilter type="text" field="staffs?.transaction?" matchMode="contains" [showMenu]="false"></p-columnFilter>
               </th>
               <th>
-
+                <p-columnFilter type="text" field="staffs?.totalAmount" matchMode="contains" [showMenu]="false"></p-columnFilter>
               </th>
             </tr>
           </ng-template>
