--- a/src/app/features/base/components/dashboard/dashboard.component.html
+++ b/src/app/features/base/components/dashboard/dashboard.component.html
@@ -50,7 +50,7 @@
                   <div class="row">
                       <div class="col-sm-12">
                         <app-dynamic-table
-                          [tableDetails]="tableDetails"
+                          [tableDetails]="policyDataTable"
                         ></app-dynamic-table>
                       </div>
                   </div>
@@ -65,7 +65,7 @@
                   <div class="row">
                       <div class="col-sm-12">
                         <app-dynamic-table
-                          [tableDetails]="tableDetails2"
+                          [tableDetails]="quotationDataTable"
                         ></app-dynamic-table>
                       </div>
                   </div>
