--- a/src/app/features/reports/create-report/create-report.component.css
+++ b/src/app/features/reports/create-report/create-report.component.css
@@ -109,6 +109,12 @@
 .criteria-preview {
   text-align: right;
 }
+:host ::ng-deep .p-dropdown {
+  width: 100%;
+  border-radius: 0px;
+  height: 40px;
+  font-size: 0.9rem;
+}
 
 /*primeng style*/
 .container .row .p-dropdown .p-dropdown-label.p-placeholder,
@@ -125,4 +131,28 @@
   padding: 0.5em;
   font-size: 0.9em;
   color: #00529b!important;
+}
+
+.sub-category:hover,
+.sub-category:active
+ {
+  background-color: #00539b03;
+}
+.metricSublist {
+  cursor: pointer;
+  transform: translateX(15px);
+  font-size: 13px;
+}
+
+.metricSublist:hover {
+  font-weight: 900;
+  background-color: #00539b06;
+}
+
+:host ::ng-deep .pill-box {
+  border: solid 1px #eee;
+  margin-top: 20px;
+  min-width: 200px;
+  font-size: 11px;
+  font-weight: 900;
 }
