--- a/src/app/shared/components/dynamic-chart/dynamic-chart.component.html
+++ b/src/app/shared/components/dynamic-chart/dynamic-chart.component.html
@@ -1,8 +1,8 @@
 
 <div class="row">
   <div class="row">
-    <p class="text-primary fw-bold">
-      {{ chartTitle }} <br>
+    <p class="text-primary fw-bold set-title">
+      {{ chartTitle | uppercase }} <br>
       <!--<span class="fs-5">KSH 20,000</span>-->
     </p>
   </div>
