--- a/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.html
+++ b/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.html
@@ -1,1 +1,13 @@
 <p>ticket-details works!</p>
+
+<app-dynamic-form-modal
+  [modalVisible]="modalVisible"
+  (actionEmitter)="changeModal($event)"
+  [formFields]="fieldsets"
+  [fieldsPerRow]="1"
+  [title]="'Client Details'"
+  (formSubmitted)="submitForm($event)"
+  >
+</app-dynamic-form-modal>
+
+  <button (click)="openModal()" class="btn btn-primary">Open Dynamic Form Modal</button>
