--- a/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
+++ b/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
@@ -4,11 +4,11 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="navbar">
                   <li class="nav-item">
-                      <a (click)="dynamicSideBarMenu(defaultSidebar)" class="nav-link" href="#" routerLink="/home/dashboard" style="font-weight: 700;"><i class="fa-solid fa-house-chimney" style="padding-right: 6px; font-size: 20px;"></i>Dashboard</a>
+                      <a (click)="dynamicSideBarMenu(defaultSidebar)" class="nav-link" href="#" routerLink="/home/dashboard" style="font-size: 12px;"><i class="fa-solid fa-house-chimney" style="padding-right: 6px;"></i>{{'Dashboard' | uppercase}}</a>
                   </li>
                   <li class="nav-item dropdown" >
-                      <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-weight: 700;">
-                        <i class="fa-solid fa-file-invoice-dollar" style="padding-right: 6px; font-size: 20px;"></i>Accounts
+                      <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-size: 12px;">
+                        <i class="fa-solid fa-file-invoice-dollar" style="padding-right: 6px; font-size: 16px;"></i>{{'Accounts' | uppercase}}
                       </a>
                       <ul class="dropdown-menu">
                         <ng-container *ngFor="let account of accountSubMenuList">
@@ -37,8 +37,8 @@
                       </ul>
                   </li> -->
                   <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-weight: 700;">
-                        <i class="fa-solid fa-handshake-angle" style="padding-right: 6px; font-size: 20px;"></i>Reinsurance
+                      <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-size: 12px;">
+                        <i class="fa-solid fa-handshake-angle" style="padding-right: 6px; font-size: 16px;"></i>{{'Reinsurance' | uppercase}}
                       </a>
                       <ul class="dropdown-menu">
                         <ng-container *ngFor="let claim of reinsuranceubMenuList">
@@ -57,8 +57,8 @@
                       </ul>
                   </li> -->
                   <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-weight: 700;">
-                        <i class="fa-solid fa-people-group" style="padding-right: 6px; font-size: 20px;"></i>Team
+                      <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-size: 12px;">
+                        <i class="fa-solid fa-people-group" style="padding-right: 6px; font-size: 16px;"></i>{{'Team' | uppercase}}
                       </a>
                       <ul class="dropdown-menu">
                         <ng-container *ngFor="let team of teamSubMenuList">
@@ -67,12 +67,12 @@
                       </ul>
                   </li>
                   <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-weight: 700;">
-                        <i class="fa-solid fa-toolbox" style="padding-right: 6px; font-size: 20px;"></i>Administration
+                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false" style="font-size: 12px;">
+                        <i class="fa-solid fa-toolbox" style="padding-right: 6px; font-size: 16px;"></i>{{'Administration' | uppercase}}
                       </a>
                       <ul class="dropdown-menu">
                           <ng-container *ngFor="let admin of administationSubMenuList">
-                          <li><a class="dropdown-item"  (click)="dynamicSideBarMenu(admin)">{{admin['name']}}</a></li>
+                          <li *ngIf="admin?.isActive"><a class="dropdown-item"  (click)="dynamicSideBarMenu(admin)">{{admin['name']}}</a></li>
                         </ng-container>
                       </ul>
                   </li>
@@ -80,10 +80,10 @@
               <div class="d-flex" id="chart">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                       <li class="nav-item">
-                          <a class="nav-link" routerLink="./reports"><i class="fa-solid fa-chart-simple" style="padding-right: 6px; font-size: 20px;"></i>New Chart</a>
+                          <a class="nav-link" routerLink="./reports"><i class="fa-solid fa-chart-simple" style="padding-right: 6px; font-size: 20px;"></i>{{'New Chart' | uppercase}}</a>
                       </li>
                       <li class="nav-item">
-                          <a class="nav-link" routerLink="./reports"><i class="fa-solid fa-chart-pie" style="padding-right: 6px; font-size: 20px;"></i>Analytics</a>
+                          <a class="nav-link" routerLink="./reports"><i class="fa-solid fa-chart-pie" style="padding-right: 6px; font-size: 20px;"></i>{{'Analytics' | uppercase}}</a>
                       </li>
                   </ul>
               </div>
