--- a/src/app/features/base/components/header/header.component.html
+++ b/src/app/features/base/components/header/header.component.html
@@ -4,7 +4,7 @@
           <button class="navbar-toggler" type="button" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
           </button>
-          <span class="brand-name">TurnQuest</span>
+          <span class="brand-name" style="font-size: 13px; font-weight: 900;">TURNQUEST</span>
       </a>
       <div class="profile">
           <img src="../../../../../assets/images/jane-doe.png" alt="john doe">
