--- a/src/app/features/entities/components/entity/view-entity/view-entity.component.html
+++ b/src/app/features/entities/components/entity/view-entity/view-entity.component.html
@@ -53,7 +53,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-header bg-transparent">Profile</div>
+                        <div class="card-header bg-transparent">{{'Profile' | uppercase}}</div>
                         <div class="card-body">
                             <div *ngFor="let role of entityAccountIdDetails" class="accounts_container">
                                 <label for="partyType" class="entity_accounts_list">
@@ -66,7 +66,7 @@
                     </div>
                     <div class="card">
                         <div class="card-header bg-transparent">
-                            Client Information
+                            {{'Client Information' | uppercase}}
                         </div>
                         <div class="card-body">
                             <div class="row entityAccountDetails">
@@ -116,7 +116,7 @@
                         </div>
                     </div>
                     <div class="card">
-                        <div class="card-header bg-transparent">Basic Information</div>
+                        <div class="card-header bg-transparent">{{'Basic Information' | uppercase}}</div>
                             <div class="card-body">
 
                                 <div class="row entityAccountDetails">
@@ -158,7 +158,7 @@
                 </div>
                 <div class="col-md-6 entityAccInfo">
                     <div class="card">
-                        <div class="card-header bg-transparent">More Information</div>
+                        <div class="card-header bg-transparent">{{'More Information' | uppercase}}</div>
                         <div class="card-body">
                             <div class="row mb-2">
                                 <div class="col-6 card-view ">
