--- a/src/app/features/reports/reports/reports.component.html
+++ b/src/app/features/reports/reports/reports.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-sm-4 offset-sm-4 my-5">
+  <div class="col-sm-4 offset-sm-4 my-5" style="background-color: white; padding: 1rem 2rem; border: 1px solid #00000030;">
     <app-dynamic-chart
       [basicData]="basicData"
       [chartType]="'line'"
