--- a/src/app/shared/components/dynamic-breadcrumb/dynamic-breadcrumb.component.html
+++ b/src/app/shared/components/dynamic-breadcrumb/dynamic-breadcrumb.component.html
@@ -1,5 +1,5 @@
 <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='%236c757d'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
-  <ol class="breadcrumb">
+  <ol class="breadcrumb" style="font-size: 10px;">
     <li *ngFor="let crumb of breadCrumbItems; let i = index" class="breadcrumb-item" [ngClass]="{'active': i == breadCrumbItems.length - 1}">
       <a *ngIf="i < breadCrumbItems.length - 1" [routerLink]="crumb.url">{{ crumb.label }}</a>
       <span *ngIf="i == breadCrumbItems.length - 1" aria-current="page">{{ crumb.label }}</span>
