--- a/src/styles.css
+++ b/src/styles.css
@@ -32,3 +32,32 @@
     opacity: 1;
   }
 }
+
+
+ .p-fluid .p-inputtext {
+  width: 100%;
+  height: 30px;
+  border-radius: 0;
+}
+
+
+.p-datatable.p-datatable-sm .p-datatable-thead > tr > th {
+  padding: 0.1rem 0.5rem;
+  font-size: 0.78em;
+  background-color: #00539b03;
+}
+
+ svg.p-icon.p-sortable-column-icon {
+  height: 10px;
+
+}
+ tr.ng-star-inserted {
+  border: 0;
+}
+
+.base-content .base-content-section table tr th {
+  font-size: 13px;
+  font-weight: 700;
+}
+
+
