--- a/src/app/features/gis/components/claim/components/list-claims/list-claims.component.html
+++ b/src/app/features/gis/components/claim/components/list-claims/list-claims.component.html
@@ -1,1 +1,152 @@
-<p>list-claims works!</p>
+<div class="row">
+    <div class="col-md-12 col-lg-12 col-xxxl-12 top-elements">
+      <div class="float-left-element">
+        <h2 class="top-header-text">Claims</h2>
+      </div>
+      <div class="top-link-float-right">
+        <a href="/home">Home</a>
+        <i class="fa fa-angle-right top-link-arrow" aria-hidden="true"></i>
+        <a href="/home/dashboard">CRM</a>
+        <i class="fa fa-angle-right top-link-arrow" aria-hidden="true"></i>
+        <a href="/home/view-claim" class="active">Claims </a>
+      </div>
+    </div>
+    <div class="col-12 top-staff-btns">
+      <button type="button" class="btn btn-primary float-left-element" id="btn-new-claim">New claim</button>
+      <button type="button" class="btn btn-outline-primary float-left-element" id="btn-import-claim">Import claim</button>
+      <button type="button" class="btn float-left-element" id="btn-filter-claim" data-toggle="modal" data-target="#filterModal">
+        <i class="fa fa-filter common-icon-color"></i>Filter
+      </button>
+      <form class="form-inline float-left-element">
+        <button type="submit">Search</button>
+        <input type="search" id="input-search-claim" name="input-search-claim" class="input-group-sm"
+               placeholder="Search by name" [(ngModel)]="listFilter"  [ngModelOptions]="{standalone: true}">
+      </form>
+    </div>
+    <div class="col-md-12 col-lg-12 col-xxxl-12">
+      <div class="card">
+        <div class="card-body">
+          <p-table
+                   [autoLayout]="true"
+                   [paginator]="true"
+                   [rowHover]="true"
+                   [showCurrentPageReport]="true"
+                   [rows]="pageSize"
+                   [totalRecords]="claims.totalElements"
+                   [value]="claims.content"
+                   styleClass="p-datatable-sm"
+                   responsiveLayout="scroll" class='ui-datatable'
+                   currentPageReportTemplate="{first} - {last} of {totalRecords}">
+            <ng-template pTemplate="header">
+              <tr>
+                <th pSortableColumn="claimNumber"  class="head">Claim Number<p-sortIcon field="claimNumber"></p-sortIcon></th>
+                <th pSortableColumn="policyNumber"  class="head">Policy Number<p-sortIcon field="policyNumber"></p-sortIcon></th>
+                <th pSortableColumn="product"  class="head">Product<p-sortIcon field="product"></p-sortIcon></th>
+                <th pSortableColumn="status"  class="head">Status<p-sortIcon field="status"></p-sortIcon></th>
+                <th pSortableColumn="notificationDate"  class="head">Notification Date<p-sortIcon field="notificationDate"></p-sortIcon></th>
+                <th pSortableColumn="total_claim_amount"  class="head">Incurred Amount<p-sortIcon field="total_claim_amount"></p-sortIcon></th>
+                <th class="head">Action</th>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="body" let-claim>
+              <tr>
+                <td class="body">{{claim?.claim_no}}</td>
+                <td class="body">{{claim?.pol_policy_no}}</td>
+                <td class="body">{{claim?.product?.description | titlecase}}</td>
+                <td class="body">{{claim?.claim_status | titlecase}}</td>
+                <td class="body">{{claim?.notificationDate}}</td>
+                <td class="body">{{claim?.total_claim_amount}}</td>
+                <td>
+                  <button type="button" class="btn" id="btn_view_claim" >View</button>
+                </td>
+              </tr>
+            </ng-template>
+            <ng-template pTemplate="emptymessage">
+              <tr>
+                <td colspan="8">No claim found.</td>
+              </tr>
+            </ng-template>
+          </p-table>
+        </div>
+      </div>
+      <div class="lower-navigation mt-3">
+        <!-- <ngx-back-link ngxBackLink></ngx-back-link> -->
+      </div>
+    </div>
+  </div>
+  <div class="container">
+  
+    <!-- Modal -->
+    <div class="modal fade" id="filterModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-sm modal-dialog-centered" role="document">
+        <div class="modal-content">
+          <div class="modal-header pad">
+            <div class="row">
+              <div class="col-lg-12">
+                <h6 class="modal-title top" id="exampleModalLabel">View</h6>
+              </div>
+            </div>
+  
+          </div>
+          <div class="modal-body">
+  
+            <form [formGroup]="sortingForm">
+              <div>
+                <div class="form-check mb-2">
+                  <input
+                    class="form-check-input box"
+                    type="checkbox"
+                    value="dateCreated"
+                    id="CheckDate"
+                    checked
+                    formControlName="dateCreated"
+                  >
+                  <i class="fa fa-calendar icon"></i>
+                  <label class="form-check-label pl-2" for="CheckDate">
+                    Date
+                  </label>
+                </div>
+                <div class="form-check mb-2">
+                  <input
+                    class="form-check-input box"
+                    type="radio"
+                    value="asc"
+                    id="CheckAsc"
+                    formControlName="sortOrder"
+                  >
+                  <i class="fa fa-sort-amount-up icon"></i>
+                  <label class="form-check-label pl-2" for="CheckAsc">
+                    Ascending
+                  </label>
+                </div>
+                <div class="form-check">
+                  <input
+                    class="form-check-input box"
+                    type="radio"
+                    value="desc"
+                    id="CheckDesc"
+                    formControlName="sortOrder"
+                  >
+                  <i class="fa fa-sort-amount-down icon"></i>
+                  <label class="form-check-label pl-2" for="CheckDesc">
+                    Descending
+                  </label>
+                </div>
+  
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer border-top-0">
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-dismiss="modal"
+            >Save
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  
+  </div>
+  
