--- a/src/app/features/administration/components/staff-performance/view-employee-transactions/view-employee-transactions.component.html
+++ b/src/app/features/administration/components/staff-performance/view-employee-transactions/view-employee-transactions.component.html
@@ -31,7 +31,7 @@
     <div class="row col-lg-10 pb-2">
       <div class="col-lg-3 col-sm-6">
         <label class="transactionLabel">Employee Name: </label>
-        <label >{{name}}</label>
+        <p style="color: #000">{{name}}</p>
       </div>
 
       <div class="col-lg-2 col-sm-6">
