--- a/src/app/shared/components/dynamic-simple-modal/dynamic-simple-modal.component.html
+++ b/src/app/shared/components/dynamic-simple-modal/dynamic-simple-modal.component.html
@@ -1,14 +1,20 @@
 <!-- Modal -->
-<div class="modal fade" [ngClass]="{ 'show': modalVisible }" tabindex="-1" role="dialog" aria-labelledby="dynamicModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
+<div class="modal fade" [ngClass]="{ 'show': modalVisible }"
+     tabindex="-1" [style.z-index]="zIndex"
+     role="dialog" aria-labelledby="dynamicModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="dynamicModalLabel">{{ modalTitle }}</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" (click)="emitAction()"></button>
       </div>
       <div class="modal-body">
-        {{ modalBody }}
+        <div *ngIf="!useDynamicContent">{{ modalBody }}</div>
+        <div class="row" *ngIf="useDynamicContent">
+          <ng-content select="[modal-body-content]"></ng-content>
+        </div>
       </div>
+
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="emitAction()">Close</button>
         <button type="button" class="btn btn-primary" (click)="emitAction()">{{ modalButtonLabel }}</button>
@@ -16,3 +22,4 @@
     </div>
   </div>
 </div>
+
