--- a/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
+++ b/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
@@ -40,13 +40,14 @@
 
 <div style="padding: 2rem 0 0 1rem;">
   <button class="btn btn-success" (click)="generateAuthorizeOtp()" style="margin-right: 1rem;">Authorize</button>
-  <button class="btn btn-primary">Reassign</button>
+  <button class="btn btn-primary" (click)="checkSelectedTickets()">Reassign</button>
 </div>
 <div class="my-4 mx-4">
   <div class="card">
     <div class="card-body">
       <p-table
       [value]="filteredTickets"
+      [(selection)]="selectedTickets"
       [tableStyle]="{ 'min-width': '50rem' }"
       [paginator]="true"
       [rows]="10"
@@ -232,3 +233,8 @@
 
 </div>
 
+<app-reassign-ticket-modal
+  [reassignModalVisible]="showReassignTicketsModal"
+  (actionReassignEmitter)="handleAction($event)"
+  (reassignData)="reassignSubmitted($event)">
+</app-reassign-ticket-modal>
