VQ-273 Ability to have the identified reports per module

--- a/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.html
+++ b/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.html
@@ -4,7 +4,7 @@
       Full ticket details
     </p-tabPanel>
     <p-tabPanel header="Reports">
-      Reports
+      <app-ticket-reports></app-ticket-reports>
     </p-tabPanel>
     <p-tabPanel header="Documents">
       Documents
