--- a/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
+++ b/src/app/features/administration/components/tickets/view-tickets/view-tickets.component.html
@@ -123,7 +123,7 @@
               <td class="body">{{ ticket.intermediaryName }}</td>
               <td class="body">{{ ticket.ticketFrom }}</td>
               <td class="body">{{ ticket.ticketAssignee }}</td>
-              <td class="body ticket-button" (click)="goToTicketDetails(ticket.ticketID)">
+              <td class="body ticket-button" (click)="goToTicketDetails(ticket.ticketID, ticket.systemModule)">
                  <i class="fa-regular fa-eye" style="font-size: 17px;"></i>
                  <!-- Details -->
                 </td>
