--- a/src/app/features/entities/components/edit/edit.component.css
+++ b/src/app/features/entities/components/edit/edit.component.css
@@ -1,4 +1,127 @@
-label {
+/* label {
   font-weight: bold;
   font-size: 0.9em;
+} */
+
+.nav-link {
+  color: rgba(0, 0, 0, 0.85);
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 22px;
+}
+
+.nav-link.active {
+  color:  #1890FF;
+}
+
+label {
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.col-form-label {
+  color: #000;
+}
+
+h6 {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  color: #323A46;
+}
+
+/* .head {
+  padding: 0.5rem;
+  font-weight: 500 !important;
+  font-size: 14px;
+} */
+
+.body {
+  font-size: 14px;
+  color: #3A3B3F;
+}
+
+.nextKinBtn {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  text-align: center;
+  text-transform: uppercase;
+  color: #00529B;
+}
+
+.modal-title {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  display: flex;
+  align-items: center;
+  color: #00529B;
+}
+
+ /* Assign Supervisor Modal Table */
+:host ::ng-deep {
+  .p-datatable {
+    .p-datatable-thead>tr>th.assign-supervisor-table-head {
+      width: 50%;
+      background: rgba(0, 82, 155, 0.19);
+    }
+  }
+}
+
+.dropdown-wrapper {
+  font-size: 1rem;
+  font-weight: 400;
+  position: relative;
+  display: block;
+}
+
+.manager-dropdown-icon {
+  position: absolute;
+  top: 100%;
+  right: 5px;
+  transform: translateY(70%);
+  cursor: pointer;
+}
+
+/**Supervisor Modal **/
+.cancelBtn {
+  box-sizing: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.96);
+  border-radius: 2px;
+  color: #000000;
+  float: left !important;
+  background-color: #ffffff;
+}
+
+.assign-supervisor-btn {
+  border-radius: 2px;
+  border: 1px solid #00529B;
+  background: rgba(0, 82, 155, 0.8);
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 19px;
+}
+
+.supervisor-modal-bottom-btn {
+  width: 98px;
+  height: 35px;
+  box-sizing: border-box;
+}
+
+input[type=search] {
+  vertical-align: center;
+  line-height: normal;
+  padding: 5px 12px;
+  border: 1px solid #DCDCDC;
+  border-radius: 2px;
+  /* -webkit-appearance: none;
+  -moz-appearance: none; */
 }
